k8s/00-namespace-config-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: roadguard
  labels:
    app.kubernetes.io/name: roadguard
    app.kubernetes.io/part-of: smart-city-infrastructure
